--- a/driver/CMakeLists.txt
+++ b/driver/CMakeLists.txt
@@ -83,11 +83,11 @@ set(OMNI_XMOD_GENERIC "${OMNI_HOME}/F-FrontEnd/src/fincludes/")
 
 set(CLAW_X2T_CONFIG_PATH "${CMAKE_SOURCE_DIR}/driver/etc/")
 set(CLAW_X2T_DRIVER_LIB_DIR "${CMAKE_SOURCE_DIR}/driver/libexec/")
-set(CLAW_X2T_TATSU_JAR "${CMAKE_BINARY_DIR}/build/${CLAW_X2T_TATSU}.jar")
-set(CLAW_X2T_SHENRON_JAR "${CMAKE_BINARY_DIR}/build/${CLAW_X2T_SHENRON}.jar")
-set(CLAW_X2T_WANI_JAR "${CMAKE_BINARY_DIR}/build/${CLAW_X2T_WANI}.jar")
+set(CLAW_X2T_TATSU_JAR "${PROJECT_BINARY_DIR}/build/${CLAW_X2T_TATSU}.jar")
+set(CLAW_X2T_SHENRON_JAR "${PROJECT_BINARY_DIR}/build/${CLAW_X2T_SHENRON}.jar")
+set(CLAW_X2T_WANI_JAR "${PROJECT_BINARY_DIR}/build/${CLAW_X2T_WANI}.jar")
 set(CLAW_X2T_CONFIG_PATH "${CMAKE_SOURCE_DIR}/driver/etc/")
-set(CLAW_XMOD_GENERIC "${CMAKE_BINARY_DIR}/modules/")
+set(CLAW_XMOD_GENERIC "${PROJECT_BINARY_DIR}/modules/")
 
 set(ANTLR4 "${CMAKE_SOURCE_DIR}/cx2t/lib/${ANTLR4_NAME}.jar")
 set(ANTLR4_RUNTIME "${CMAKE_SOURCE_DIR}/cx2t/lib/${ANTLR4_RUNTIME_NAME}.jar")
